Chore: modernize code
- Remove most usage of MessageReceivedEvent in favor of the generic IContext instance (easier porting if needed)
- Remove unused imports
- Use Java 14 records when possible
- Replace all possible calls to .collect(Collectors#toList) to Stream#toList (except ones where it's not possible, ofc)
- Use patterns in instanceof calls
- Remove unused code (usually used before porting to slash)
- Use i18n on places where it wasn't used.
- Remove jagrosh's FinderUtil code (added it into FinderUtils anyway, just remove the abandoned library)
- Remove jcenter() from build.gradle as we have no jcenter dependencies (and it didn't work anyway)